crates/swc_ecma_parser/tests/test262-error-references/fail/168502012959421f.js.stderr
error: Invalid left-hand side in 'for...in' statement
 --> $DIR/tests/test262-parser/fail/168502012959421f.js:1:5
  |
1 | for(([a]) of 0);
  |     ^^^^^

